# espn-fantasy-baseball-api

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: API.md  AUTHENTICATION.md  CONTRIBUTING.md  COOKBOOK.md  FAQ.md  MANAGING.md
espn_fantasy_baseball/: __init__.py  analysis.py  cli.py  client.py  constants.py  exceptions.py  league.py  optimizer.py  utils.py  writer.py
espn_fantasy_baseball/resources/: __init__.py  activity.py  boxscore.py  draft.py  matchup.py  player.py  settings.py  team.py
examples/: basic_usage.py  fa_finder.py  optimize_and_apply.py  power_rankings.py
tests/: conftest.py  test_analysis.py  test_cli.py  test_client.py  test_league.py  test_optimizer.py  test_utils.py  test_writer.py
tests/fixtures/: boxscore.json  free_agents.json  league_draft.json  league_schedule.json  league_settings.json  league_teams.json
